--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 </head>
 <body>
     <h3>HTML/CSS 1</h3>
-    <h4></h4>
+    <h4>ДЗ</h4>
+    <a href="Homework/html_css_1/base/diary.html">diary</a> <br>
+    <a href="Homework/html_css_1/base/vizbor.html">vizbor</a>
+
+    <h4>доп</h4>
+    <a href="Homework/html_css_1/additional/valid_1_1.html">valid_1_1</a> <br>
+    <a href="Homework/html_css_1/additional/valid_1_2.html">valid_1_2</a>
+
 </body>
 </html>
