--- a/Homework/html_css_1/base/diary.html
+++ b/Homework/html_css_1/base/diary.html
@@ -7,5 +7,66 @@
 </head>
 <body>
     <h1>diary</h1>
+    <p><a name="top"></a></p>  
+  <p style="height:3000px;">Здесь много-много текста.
+     a<br>   
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     <a name="middle"></a>
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+     a<br> 
+   Прокручивай его вниз. </p>
+  
+  <p><a href="#top">Наверх</a></p>
+  <a href="#middle">центр</a></p>
 </body>
 </html>
