--- a/Homework/html_css_1/base/diary.html
+++ b/Homework/html_css_1/base/diary.html
@@ -3,70 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>document</title>
 </head>
 <body>
-    <h1>diary</h1>
-    <p><a name="top"></a></p>  
-  <p style="height:3000px;">Здесь много-много текста.
-     a<br>   
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     <a name="middle"></a>
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-     a<br> 
-   Прокручивай его вниз. </p>
-  
-  <p><a href="#top">Наверх</a></p>
-  <a href="#middle">центр</a></p>
+<strong><font size="16"><p align="center">Дневник партизана</p></strong></font>
+<ol>
+  <li><strong>Вторник</strong>. Выбили <a href="http://de.wikipedia.org/">немцев</a> с опушки. Засели в доме лесника.</li>
+  <li><strong>Среда</strong>. Мощная контратака немцев вынудила нас оставить занятые ранее позиции.</li>
+  <li><strong>Четверг</strong>. Под покровом ночи смогли снова засесть в доме лесника. Курим «Беломор».</li>
+  <li><strong>Пятница</strong>. Вернулся лесник и всех выгнал.</li>
+</ol>
+<p align="left">&#169;бородатый <a href="http://anekdotov.net/">анекдот</a></p>
+<hr>
 </body>
 </html>
