--- a/Homework/html_css_1/base/diary.html
+++ b/Homework/html_css_1/base/diary.html
@@ -6,7 +6,7 @@
     <title>document</title>
 </head>
 <body>
-<strong><font size="16"><p align="center">Дневник партизана</p></strong></font>
+<h1><p align="center">Дневник партизана</p></h1>
 <ol>
   <li><strong>Вторник</strong>. Выбили <a href="http://de.wikipedia.org/">немцев</a> с опушки. Засели в доме лесника.</li>
   <li><strong>Среда</strong>. Мощная контратака немцев вынудила нас оставить занятые ранее позиции.</li>
