--- a/Homework/html_css_1/vizbor/vizbor.html
+++ b/Homework/html_css_1/vizbor/vizbor.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>vizbor</h1>
+    <h1>Юрий Визбор</h1>
+    <h2>Вечно студент</h2>
+    <a href="vechno_student.html#top">читать сначала</a> <br>
+    <a href="vechno_student.html#last">читать с конца</a>
 </body>
 </html>
