--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
     <a href="Homework/html_css_1/base/diary.html">diary</a> <br>
     <a href="Homework/html_css_1/vizbor/vizbor.html">vizbor</a>
     <hr>
+    <h3>HTML/CSS 2</h3>
+    <h4>ДЗ</h4>
+    <a href="Homework/html_css_2/childbook.html">childbook</a> <br>
+    <hr>
 </body>
 </html>
