--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
     <h4>ДЗ</h4>
     <a href="Homework/html_css_2/childbook.html">childbook</a> <br>
     <hr>
+    <h3>HTML/CSS 3</h3>
+    <h4>ДЗ</h4>
+    <a href="Homework/html_css_3/Zvezda.html">zvezda</a> <br>
+    <hr>
 </body>
 </html>
