Html_css_3_final

--- a/Homework/html_css_3/FONT_GWF/FONT_GWF.html
+++ b/Homework/html_css_3/FONT_GWF/FONT_GWF.html
@@ -6,15 +6,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/Homework/html_css_3/converted-fonts/font.css">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <h2>Сергей Есенин — Пороша</h2>
-    Еду. Тихо. Слышны звоны<br>
+    <p>Еду. Тихо. Слышны звоны<br>
     Под копытом на снегу.<br>
     Только серые вороны<br>
-    Расшумелись на лугу.
+    Расшумелись на лугу.</p>
     <p>Заколдован невидимкой,<br>
     Дремлет лес под сказку сна.<br>
     Словно белою косынкой<br>
@@ -27,5 +28,21 @@
     Валит снег и стелет шаль.<br>
     Бесконечная дорога<br>
     Убегает лентой вдаль.</p>
-</body>
+    <hr>
+    <p style="font-family: 'Comfortaa-Regular'"></p><h2>Сергей Есенин — С добрым утром</h2></p>
+        <p style="font-family: 'Comfortaa-Regular'">Задремали звезды золотые,<br>
+            Задрожало зеркало затона,<br>
+            Брезжит свет на заводи речные<br>
+            И румянит сетку небосклона.</p>
+
+            <p style="font-family: 'Comfortaa-Regular'">Улыбнулись сонные березки,<br>
+            Растрепали шелковые косы.<br>
+            Шелестят зеленые сережки,<br>
+            И горят серебряные росы.<br></p>
+    
+            <p style="font-family: 'Comfortaa-Regular'">У плетня заросшая крапива<br>
+            Обрядилась ярким перламутром<br>
+            И, качаясь, шепчет шаловливо:<br>
+            «С добрым утром!»</p>
+        </body>
 </html>
