--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <hr>
     <h3>HTML/CSS 3</h3>
     <h4>ДЗ</h4>
-    <a href="Homework/html_css_3/Zvezda.html">zvezda</a> <br>
+    <a href="Homework/html_css_3/FONT_GWF/FONT_GWF.html">Font_GWT</a> <br>
     <hr>
 </body>
 </html>
