--- a/classwork/lesson8/lesson8.html
+++ b/classwork/lesson8/lesson8.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+ <div style="text-align: center;padding: 20px;background-color: violet;">header</div>
+ <div style="width: 300px;height: 400px; float: left;background-color: aqua;">Left form</div>
+ <div style="width: 300px;height:400px; float: right;background-color: rgb(13, 255, 0);">right form</div>
+ <div style="height:400px;background-color:   rgb(255, 0, 0);">center</div>
+ <div style="height:200px;clear: both;background-color:   rgb(255, 149, 0);">center</div>
 </body>
 </html>
