--- a/Test/test.html
+++ b/Test/test.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello world</h1>
+    <h1>hello world!</h1>
     <h2>test_on_mac</h2>
     <h3>git test mac</h3>
 </body>
