--- a/classwork/lesson9/lesson9.html
+++ b/classwork/lesson9/lesson9.html
@@ -15,7 +15,7 @@
  <div style="width: 200px;height: 300px; float: left;background-color: rgb(47, 108, 108);"></div>
  <div style="width: 200px;height: 300px; float: right;background-color: rgb(86, 163, 82);"></div>
  <div style="height:300px  ;background-color: rgb(255, 0, 0);overflow: hidden;">
-    <div style="text-align:center;height:  150px;width:200px;background-color: aliceblue;margin-left: auto;margin-right:auto;margin-top: 50px; border:  solid;">Lorem ipsum, dolor sit amet</div>          
+    <div style="text-align:center;height:  150px;width:200px;background-color: aliceblue;margin-left: auto;margin-right:auto;margin-top: 50px; border:  solid;text-align: center;"> dolor sit amet</div>          
 </div>
  <div style="height:50px;clear: both;background-color:   rgb(46, 23, 6);"></div>
  <div style="height:200px;clear: both;background-color:   rgb(255, 149, 0);"></div>
