html_css_5_homework

--- a/index.html
+++ b/index.html
@@ -23,5 +23,9 @@
     <h4>ДЗ</h4>
     <a href="Homework/html_css_4/index.html">Ramka</a> <br>
     <hr>
+    <h3>HTML/CSS 5</h3>
+    <h4>ДЗ</h4>
+    <a href="Homework/html_css_5/Maket_div.html">Maket_div</a> <br>
+    <hr>
 </body>
 </html>
