--- a/figma/index.html
+++ b/figma/index.html
@@ -15,7 +15,7 @@
 <body>
    <div class="container">
     <div class="header 1">
-        <div style="padding:10px;height: 30px;background-color: rgb(227, 226, 226);">
+        <div style="padding:10px;height: 30px;background-color: #EAEDEF;">
         <img src="Image/img1.png" alt="img1">
         <span><a href="https://ru.wikipedia.org/wiki/Набережные_Челны">г.Набережные челны</a></span>
         <span style="margin-left: 40px;font-weight: bold;"><a href="tel:88002000600">8 (800) 2000-600</a></span>
@@ -28,10 +28,33 @@
         <div style="padding: 30px;height: 100px;background-color: aliceblue;">
         <img src="Image/img2.png" alt="img2">
         <div class="catalog">
-            <div style="width: 200px; height: 30px;float: left;margin-left: 300px;margin-top: -35px;background-color: rgb(111, 38, 51);background-position: center;">
+            <div style="width: 200px; height: 30px;float: left;margin-left: 230px;margin-top: -35px;background-color: #BA257D;background-position: center;">
+            <img src="Image/Vector.png" style="margin-left: 20px;margin-top: 10px;">
+            <span style="color: white;margin-left: 30px;font-size: 12px;">Каталог товаров</span>
             </div>
+                <div style="width:400px;height: 30px;float: left;margin-left: 450px;background-color: white;margin-top: -35px;border:solid red 1px;">
+                <img src="Image/search.png" style="float: right;margin-right: 10px;margin-top: 2px;">
+                </div>
+                <div style="width: 200px;height: 60px;float: right;">
+                <ul><img src="Image/Group 1.png" style="float: right;margin-top: -35px;margin-right: 300px;">
+                <a href="#" style="color: black;font-weight: 100;float: right;margin-right: 294px;">Войти</a>
+                </ul>
+                <br>
+                <ul><img src="Image/Vector-2.png" style="float: right;margin-top: -52px;margin-right: 220px;">
+                <a href="#" style="color: black;font-weight: 100;float: right;margin-right: 194px;margin-top: -17px;">Избранное</a>
+                </ul>
+                <br>  
+                <ul><img src="Image/Group 2.png" style="float: right;margin-top: -70px;margin-right: 120px;">
+                <a href="#" style="color: black;font-weight: 100;float: right;margin-right: 94px;margin-top: -35px;">Сравнение</a>
+                </ul>
+                <br>
+                <ul><img src="Image/Group 3.png" style="float: right;margin-top: -85px;margin-right: 40px;">
+                <a href="#" style="color: black;font-weight: 100;float: right;margin-right: 18px;margin-top: -53px;">Корзина</a>
+                </ul>
+                <br>
+                </div>
         </div>
-        </div>
+    </div>
     </div>
 </div>
 </body>
