--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
     <h4>ДЗ</h4>
     <a href="Homework/html_css_5/Maket_div.html">Maket_div</a> <br>
     <hr>
+    <h3>HTML/CSS 6</h3>
+    <h4>ДЗ</h4>
+    <a href="Homework/html_css_6/css_chess/css_chess.html">Chess</a> <br>
+    <hr>
 </body>
 </html>
