--- a/Homework/html_css_5/Maket_div.html
+++ b/Homework/html_css_5/Maket_div.html
@@ -7,16 +7,20 @@
         *{
             box-sizing: border-box;
             margin: 0;
+            padding: 0;
         }
     </style>
     <title>Document</title>
 </head>
 <body>
-    <div style="background-image: url(ball.png);background-position: right;background-repeat: repeat-y;">
-        <div style="background-color: rgb(84, 171, 230); padding: 20px 0px;text-align: center;font-size: 20px;color: blue;">
+    <div style="background-color: rgb(84, 171, 230); padding: 20px 0px;text-align: center;font-size: 20px;color: blue;">
         <strong>ПРИВЕТ УЧАСТНИКАМ СОРЕВНОВАНИЙ!</strong></div>
-            <div style="background-color: yellow;width:20%;float:left;text-align: left;">
-                <div><p style="padding-left: 10px;padding-top: 15px;font-size: 20px;">Виды спорта:</p>
+    <div style="background-image: url(ball.png);background-position: right;background-repeat: repeat-y;">
+        <div style="background: url(yellow.png) left top repeat-y;">
+            <div style="background:#FCFD95;
+                    float: left;
+                    width: 200px;">
+                <p style="padding-left: 10px;padding-top: 15px;font-size: 20px;">Виды спорта:</p>
                     <br>
                     <ul style="padding-bottom: 10px;padding-left: 25px;">
                         <li><a href="https://ru.wikipedia.org/wiki/Конькобежный_спорт">конькобежный спорт</a></li>
@@ -29,9 +33,9 @@
                         <li><a href="https://ru.wikipedia.org/wiki/Синхронное_плавание">синхронное плавание</a></li>
                         <li><a href="https://ru.wikipedia.org/wiki/Шахматы">шахматы</a></li>
                         <li><a href="https://ru.wikipedia.org/wiki/Шашки">шашки</a></li>
-                    </ul>   
-                </div>
+                    </ul>
             </div>
+            <div style="overflow: hidden;"></div>
         <div style="width: 80%;padding: 20px;">
             <h3 style="text-align: center;font-size: 24px;"><strong>Футбол</strong></h3>
             <span><img src="canavaro.jpeg" style="float: left;padding-left: 10px;margin-right: 10px;">Футбол — командный вид спорта, в котором целью является забить мяч в ворота соперника ногами
@@ -40,9 +44,9 @@
             и люди с ограниченными физическими возможностями. Законы очень часто формулировались в общих чертах, которые позволяют упростить их применение в зависимости от 
             характера игры.</span>
         </div>
-        <div style="clear: both;"></div>
+        <div style="clear: both;background-color: black;"></div>
+        </div>
         <div style="background-color: rgb(84, 171, 230); padding: 20px 0px;text-align: center;font-size: 20px;color: blue;">
         <strong>ГЛАВНОЕ НЕ ПОБЕДА, А УЧАСТИЕ!</strong></div>
-    </div>
 </body>
 </html>
