Html_css_8_maket

--- a/Homework/html_css_8/Maket_div.html
+++ b/Homework/html_css_8/Maket_div.html
@@ -17,6 +17,19 @@
         <div style="background-color: rgb(130, 216, 238); height: 50px; color: blue; text-align: center; padding: 10px;"><h2>Привет участникам соревнований!</h2>
         </div>
         <div style="background-color: rgb(250, 248, 162);">
+            <div style="
+            position: fixed;
+            width: 105px;
+            height: 45px;
+            top: 25px;
+            right: 25px;
+            padding: 5px;
+            background-color: #4df54d;
+            border: solid 1px #4a664a;
+            text-align: center;
+            font-size: 15px;">
+            <a href="#">ВСТУПИТЬ В КЛУБ</a>
+            </div>
             <div style="padding: 30px; width: 150px; float: left" >
                 <ul><strong>Виды спорта:</strong>
                 <li><a href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%BD%D1%8C%D0%BA%D0%BE%D0%B1%D0%B5%D0%B6%D0%BD%D1%8B%D0%B9_%D1%81%D0%BF%D0%BE%D1%80%D1%82">конькобежный спорт</a></li>
