--- a/index.html
+++ b/index.html
@@ -8,28 +8,33 @@
 <body>
     <h3>HTML/CSS 1</h3>
     <h4>ДЗ</h4>
-    <a href="Homework/html_css_1/base/diary.html">diary</a> <br>
-    <a href="Homework/html_css_1/vizbor/vizbor.html">vizbor</a>
+    <a href="Homework/html_css_1/base/diary.html" target="_blank">diary</a> <br>
+    <a href="Homework/html_css_1/vizbor/vizbor.html" target="_blank">vizbor</a>
     <hr>
     <h3>HTML/CSS 2</h3>
     <h4>ДЗ</h4>
-    <a href="Homework/html_css_2/childbook.html">childbook</a> <br>
+    <a href="Homework/html_css_2/childbook.html" target="_blank">childbook</a> <br>
     <hr>
     <h3>HTML/CSS 3</h3>
     <h4>ДЗ</h4>
-    <a href="Homework/html_css_3/FONT_GWF/FONT_GWF.html">Font_GWT</a> <br>
+    <a href="Homework/html_css_3/FONT_GWF/FONT_GWF.html" target="_blank">Font_GWT</a> <br>
     <hr>
     <h3>HTML/CSS 4</h3>
     <h4>ДЗ</h4>
-    <a href="Homework/html_css_4/index.html">Ramka</a> <br>
+    <a href="Homework/html_css_4/index.html" target="_blank">Ramka</a> <br>
     <hr>
     <h3>HTML/CSS 5</h3>
     <h4>ДЗ</h4>
-    <a href="Homework/html_css_5/Maket_div.html">Maket_div</a> <br>
+    <a href="Homework/html_css_5/Maket_div.html" target="_blank">Maket_div</a> <br>
     <hr>
     <h3>HTML/CSS 6</h3>
     <h4>ДЗ</h4>
-    <a href="Homework/html_css_6/css_chess.html">Chess</a> <br>
+    <a href="Homework/html_css_6/css_chess.html" target="_blank">Chess </a> <br>
+    <a href="Homework/html_css_6/6c.html" target="_blank">6c</a> <br>
+    <hr>
+    <h3>HTML/CSS 8</h3>
+    <h4>ДЗ</h4>
+    <a href="Homework/html_css_8/Maket_div.html" target="_blank">Maket_div</a> <br>
     <hr>
 </body>
 </html>
