--- a/classwork/lesson 15_maket/maket.html
+++ b/classwork/lesson 15_maket/maket.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="footer">
+    <div class="header">
         <div class="line"></div>
         <div class="line"></div>
         <div class="line"></div>
@@ -15,6 +15,8 @@
         </div>
         <div class="center">
             <div class="item"></div>
+            <div class="centr"></div>
+            <div class="right"></div>
         </div>
 
 </body>
