--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <h4>ДЗ</h4>
     <a href="Homework/html_css_6/css_chess.html" target="_blank">Chess </a> <br>
     <a href="Homework/html_css_6/6c.html" target="_blank">6c</a> <br>
+    <a href="Homework/html_css_6/star.html" target="_blank">stars</a> <br>
     <hr>
     <h3>HTML/CSS 8</h3>
     <h4>ДЗ</h4>
