--- a/Homework/html_css_8/maket_abs/maket_abs.html
+++ b/Homework/html_css_8/maket_abs/maket_abs.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="header">
+            <p style="margin: 20px;">Я к вам пишу — чего же боле? Что я могу еще сказать? Теперь, я знаю, в вашей воле Меня презреньем наказать. Но вы, к моей несчастной доле Хоть каплю жалости храня, Вы не оставите меня. Сначала я молчать хотела; Поверьте: моего стыда Вы не узнали б никогда, Когда б надежду я имела Хоть редко, хоть в неделю раз В деревне нашей видеть вас.</p>
+            <div class="images">
+                <img class="biohazard" src="image/biohazard.png" alt="biohazard">
+                <img class="yin_and_yang" src="image/Yin_and_Yang.png" alt="Yin_and_Yang">
+                <img class="man-and-woman" src="image/Man-and-woman.png" alt="Man-and-woman">
+                <img class="no_smoking" src="image/No_smoking.png" alt="No_smoking">
+            </div>
+            <div class="footer_text"> 
+                <p style="margin: 20px;">Чтоб только слышать ваши речи, Вам слово молвить, и потом Все думать, думать об одном И день и ночь до новой встречи.</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
