--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
     <h3>HTML/CSS 8</h3>
     <h4>ДЗ</h4>
     <a href="Homework/html_css_8/maket_div/Maket_div.html" target="_blank">Maket_div</a> <span style="color: green;">check</span>  <br>
+    <a href="Homework/html_css_8/maket_abs/maket_abs.html" target="_blank">Maket_abs</a><br>
     <hr>
+    <h3>HTML/CSS 9</h3>
+    <h4>ДЗ</h4>
+    <a href="Homework/html_css_9/index.html" target="_blank">Youtube</a><br>
+    <hr>
+    <h3>JS 1</h3>
+    <h4>ДЗ</h4>
+    <a href="Homework/js1/anketa_if.html" target="_blank">anketa_if</a><br>
+    <a href="Homework/js1/anketa_oper.html" target="_blank">anketa_oper</a><br>
 </body>
 </html>
