--- a/Exam_maket/index.html
+++ b/Exam_maket/index.html
@@ -12,6 +12,141 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+	<body class="home_page">
+		<div class="view">
+			<header>
+				 <div class="content">
+					 <h1><a href="index.html" class="logo" title="logo">МастерСтрой</a></h1>
+					 <nav>
+						 <a href="#" class="chosen">главная</a>
+						 <a href="aboutus.html">о нас</a>
+						 <a href="classes.html">классы</a>
+						 <a href="gallery.html">фотогалерея</a>
+						 <a href="contacts.html">контакты</a>
+					 </nav>	
+					 <div class="clear"></div>
+				 </div><!-- .content -->
+			</header>		
+			<div class="slider">
+				<ul>
+					<li><img src="img/slider/yoga_capetown.jpg" alt="pic"></li>
+					<li><img src="img/slider/join_in.jpg" alt="pic"></li>
+					<li><img src="img/slider/kidsyogi.jpg" alt="pic"></li>
+					<li><img src="img/slider/meditation.jpg" alt="pic"></li>
+					<li><img src="img/slider/pregnant-yoga.jpg" alt="pic"></li>
+				</ul>	
+			</div><!-- .slider -->
+			<div class="advert">
+				<div class="content">
+					<h3>Центр йоги и самопознания.</h3>
+					<p>«До того, как Вы попробуете йогу на практике, теория бесполезна. После этого – теория очевидна». &copy;David Williams, преподаватель Аштанга. Приходите к нам на занятия и убедитесь в этом сами.</p>
+					<a href="contacts.html" class="attention">Записаться</a>
+				</div><!-- .content -->
+			</div><!-- .advert -->
+			<div class="services">
+				<div class="content">
+					<h2 class="dashed">занятия</h2>
+					<p class="description">Будь вы ребенок, беременная женщина или обычный человек любой комплекции и физического состояния, вы найдете в нашей студии занятия именно для себя.  </p>
+					<div class="classtype">
+						<div class="type">
+							<h3>Хатха-йога</h3>
+							<a href="classes.html#hathayoga" target=_blank><img src="img/hatha.jpg" title="hathayoga" alt="prenatalyoga"></a>
+							<p class="short">Хатха-Йога — это учение о физической гармонии, достигаемой с помощью физических средств воздействия на организм.</p>
+							<button><a href="classes.html#hathayoga" target=_blank>подробнее</a></button>
+						</div><!-- .type-->
+						<div class="type">
+							<h3>Йога для беременных</h3>
+							<a href="classes.html#prenatalyoga" target=_blank><img src="img/pregnant1.jpg" title="prenatalyoga" alt="prenatalyoga"></a>
+							<p class="short">Занятия йогой для беременных женщин приносят двойную пользу, поскольку занимаются сразу 2 человека.</p>
+							<button><a href="classes.html#prenatalyoga" target=_blank>подробнее</a></button>
+						</div><!-- .type-->
+						<div class="type">
+							<h3>Йога для детей</h3>
+							<a href="classes.html#kidsyoga" target=_blank><img src="img/kids-yoga1.jpg" title="kidsyoga" alt="kidsyoga"></a>
+							<p class="short">Основная задача йоги для детей &mdash; укрепить здоровье и развить в ребенке внимательное и уважительное отношение к своему телу.</p>
+							<button><a href="classes.html#kidsyoga" target=_blank>подробнее</a></button>
+						</div><!-- .type -->
+						<div class="clear"></div>
+					</div><!-- .classtype -->
+				</div><!-- .content -->
+			</div><!-- .services -->
+			<div class="about">
+				<div class="line"></div><!-- .line -->
+				<div class="content">
+					<h2 class="dashed">о нас</h2>
+					<p class="description">Главная миссия нашей студии - сделать йогу доступной каждому, объяснить и продемонстрировать ее невероятный эффект на ваше состояние здоровья и духовного самочувствия.</p>
+					<div class="info">
+						<div class="type">
+							<h3 class="white">Наша философия</h3>
+							<a href="http://enjoyoga.ru/basics/filosofiya-yogi/" target=_blank><img src="img/stones.jpg" title="philosophy" alt="philosophy"></a>
+							<p class="short">Наша философия ничем не противоречит философии классической йоги, где главными принципам являются ненасилие и постоянная работа над собой.</p>
+							<button><a href="http://enjoyoga.ru/basics/filosofiya-yogi/" target=_blank>подробнее</a></button>
+						</div><!-- .type -->
+						<div class="type">
+							<h3 class="white">Наша команда</h3>
+							<a href="aboutus.html" target=_blank><img src="img/teachers.jpg" title="our team" alt="our team"></a>
+							<p class="short">Наша команда &mdash; это достойные, приятные и духовно целостные люди, умеющие тактично и в то же время настойчиво помочь вам в вашей практике.</p>
+							<button><a href="aboutus.html" target=_blank>подробнее</a></button>
+						</div><!-- .type -->
+						<div class="clear"></div>
+					</div><!-- .info -->
+				</div><!-- .content -->
+			</div><!-- .about -->
+			<div class="event">
+				<div class="content">
+					<h3>Практический семенар &laquo;Основы Аюрведы и питание&raquo;.</h3>
+					<p class="short">Запись желающих на 2014 год. </p>
+					<img src="img/ayurvedaspices1.jpg" alt="ayurveda" title="ayurveda">
+					<p class="short">Наука о здоровой и гармоничной жизни. Выявление индивидуальных качеств и использование питания, специй, ароматерапии, знания о своей природе для сохранения внутреннего баланса на уровне тела, ума, эмоций и чувств и сохранения молодости и здоровья. Практика йоги «Оздоровление праной». Часть занятий ведет специалист по Ведической кулинарии и специям родом из Индии, так же специалист по ароматерамии и массажу.</p>
+				</div><!-- .content -->
+			</div><!-- .event -->
+			<footer>
+				<div class="line"></div><!-- .line -->
+				<div class="content">
+					<div class="shortinfo">
+						<h3 class="white">О нас</h3>
+						<p>Для того, чтобы заниматься йогой, не требуется ни специальной одежды, ни специальной подготовки.</p> 
+						<p>На наших занятиях в доступной форме объясняются практики йоги – крии, асаны, вьяямы и пранаямы. Практические занятия помогут каждому извлечь пользу из древнейшей науки - йоги.</p>
+					</div><!-- .shortinfo -->
+					<div class="shortinfo">
+						<h3 class="white">Твиты</h3>
+						<dl>
+							<dt>Tweet <span>@mindbody</span></dt>
+								<dd>Новое летнее расписание в йога-студии mindbody, не пропустите последних обновлений</dd>
+							<dt id="second">Tweet <span>@mindbody</span></dt>
+								<dd>Поставки товаров для профессиональных занятий йогой из Индии, дополнительная информация у администратора студии mindbody</dd>
+						</dl>
+					</div><!-- .shortinfo -->
+					<div class="shortinfo">
+						<h3 class="white">Рассылка</h3>
+						<p>Подпишитесь на нашу рассылку, чтобы получать новости о занятиях и семенарах регулярно!</p>
+						<form method=post action='http://www.it-academy.by/TestForm.php'>
+							<input type="text" name="e-mail" placeholder="ваш e-mail" class="borderless">
+							<button type="submit">подписаться</button>
+						</form>
+					</div><!-- .shortinfo -->
+					<div class="shortinfo">
+						<h3 class="white">Контакты</h3>
+						<p>г. Минск, ул. Бирюзова, 11, 5-й этаж.</p>
+						<ul>
+							<li><span>Телефон:&nbsp; </span> +375 (29) 115-51-71</li>
+							<li><span>E-mail:&nbsp; </span> <a href="mailto: folezhok@gmail.com" id="footlink">folezhok@gmail.com</a></li>
+						</ul>
+						<ul class="social">
+							<li class="tweet"><a href="#" ></a></li>
+							<li class="fb"><a href="#"></a></li>
+							<li class="google"><a href="#"></a></li>
+							<li class="linkedin"><a href="#"></a></li>
+						</ul>
+					</div><!-- .shortinfo -->
+					<div class="clear"></div>
+				</div><!-- .content -->		
+			</footer>	
+	
+		</div><!-- .view -->
+	
+		<script type="text/javascript" src="jquery-1.11.1.min.js"></script>
+		<script type="text/javascript" src="jquery.jcarousel.min.js"></script>
+		<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
