--- a/Exam_maket/index.html
+++ b/Exam_maket/index.html
@@ -38,32 +38,32 @@
 			</div><!-- .slider -->
 			<div class="advert">
 				<div class="content">
-					<h3>Центр йоги и самопознания.</h3>
-					<p>«До того, как Вы попробуете йогу на практике, теория бесполезна. После этого – теория очевидна». &copy;David Williams, преподаватель Аштанга. Приходите к нам на занятия и убедитесь в этом сами.</p>
+					<h3>H3</h3>
+					<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat blanditiis architecto ratione eum modi magni consequuntur est sequi pariatur quasi voluptas nihil vel, enim deleniti. Distinctio itaque beatae debitis tempora.</p>
 					<a href="contacts.html" class="attention">Записаться</a>
 				</div><!-- .content -->
 			</div><!-- .advert -->
 			<div class="services">
 				<div class="content">
-					<h2 class="dashed">занятия</h2>
-					<p class="description">Будь вы ребенок, беременная женщина или обычный человек любой комплекции и физического состояния, вы найдете в нашей студии занятия именно для себя.  </p>
+					<h2 class="dashed">H2</h2>
+					<p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos praesentium corporis voluptate in minus totam maxime, nemo illo voluptatibus facilis vel a, illum incidunt molestias asperiores accusamus delectus assumenda ipsam.</p>
 					<div class="classtype">
 						<div class="type">
-							<h3>Хатха-йога</h3>
+							<h3>H3</h3>
 							<a href="classes.html#hathayoga" target=_blank><img src="img/hatha.jpg" title="hathayoga" alt="prenatalyoga"></a>
-							<p class="short">Хатха-Йога — это учение о физической гармонии, достигаемой с помощью физических средств воздействия на организм.</p>
+							<p class="short">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis enim sint ratione quod aliquid sequi suscipit esse vitae ipsa non iure adipisci, nobis, at facilis atque excepturi repudiandae sed officia.</p>
 							<button><a href="classes.html#hathayoga" target=_blank>подробнее</a></button>
 						</div><!-- .type-->
 						<div class="type">
-							<h3>Йога для беременных</h3>
+							<h3>H3</h3>
 							<a href="classes.html#prenatalyoga" target=_blank><img src="img/pregnant1.jpg" title="prenatalyoga" alt="prenatalyoga"></a>
-							<p class="short">Занятия йогой для беременных женщин приносят двойную пользу, поскольку занимаются сразу 2 человека.</p>
+							<p class="short">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore sunt voluptate alias tempore sit temporibus laboriosam nihil, culpa iusto nemo consectetur illum cupiditate exercitationem corrupti, voluptas veritatis facere nobis assumenda.</p>
 							<button><a href="classes.html#prenatalyoga" target=_blank>подробнее</a></button>
 						</div><!-- .type-->
 						<div class="type">
-							<h3>Йога для детей</h3>
+							<h3>H3</h3>
 							<a href="classes.html#kidsyoga" target=_blank><img src="img/kids-yoga1.jpg" title="kidsyoga" alt="kidsyoga"></a>
-							<p class="short">Основная задача йоги для детей &mdash; укрепить здоровье и развить в ребенке внимательное и уважительное отношение к своему телу.</p>
+							<p class="short">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque dignissimos dolor commodi veritatis deleniti eum accusamus eius perferendis magnam amet quis, eaque debitis, unde quibusdam quae qui officia mollitia repudiandae.</p>
 							<button><a href="classes.html#kidsyoga" target=_blank>подробнее</a></button>
 						</div><!-- .type -->
 						<div class="clear"></div>
@@ -73,19 +73,19 @@
 			<div class="about">
 				<div class="line"></div><!-- .line -->
 				<div class="content">
-					<h2 class="dashed">о нас</h2>
-					<p class="description">Главная миссия нашей студии - сделать йогу доступной каждому, объяснить и продемонстрировать ее невероятный эффект на ваше состояние здоровья и духовного самочувствия.</p>
+					<h2 class="dashed">H2</h2>
+					<p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, nemo magni. Itaque, facilis veniam excepturi at nostrum numquam adipisci architecto ab fuga, quos eaque fugiat cupiditate. Nobis amet harum id?</p>
 					<div class="info">
 						<div class="type">
-							<h3 class="white">Наша философия</h3>
+							<h3 class="white">H3</h3>
 							<a href="http://enjoyoga.ru/basics/filosofiya-yogi/" target=_blank><img src="img/stones.jpg" title="philosophy" alt="philosophy"></a>
-							<p class="short">Наша философия ничем не противоречит философии классической йоги, где главными принципам являются ненасилие и постоянная работа над собой.</p>
+							<p class="short">НLorem ipsum dolor sit amet consectetur adipisicing elit. Earum, obcaecati aspernatur nihil aliquam tempore possimus repellat aliquid dolor accusantium suscipit, neque totam. Labore libero explicabo nobis vel quam dolor? Ipsum.</p>
 							<button><a href="http://enjoyoga.ru/basics/filosofiya-yogi/" target=_blank>подробнее</a></button>
 						</div><!-- .type -->
 						<div class="type">
-							<h3 class="white">Наша команда</h3>
+							<h3 class="white">H3</h3>
 							<a href="aboutus.html" target=_blank><img src="img/teachers.jpg" title="our team" alt="our team"></a>
-							<p class="short">Наша команда &mdash; это достойные, приятные и духовно целостные люди, умеющие тактично и в то же время настойчиво помочь вам в вашей практике.</p>
+							<p class="short">H3</p>
 							<button><a href="aboutus.html" target=_blank>подробнее</a></button>
 						</div><!-- .type -->
 						<div class="clear"></div>
@@ -94,22 +94,22 @@
 			</div><!-- .about -->
 			<div class="event">
 				<div class="content">
-					<h3>Практический семенар &laquo;Основы Аюрведы и питание&raquo;.</h3>
-					<p class="short">Запись желающих на 2014 год. </p>
+					<h3>H3</h3>
+					<p class="short">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis sint dignissimos quis nihil id animi soluta iusto autem veritatis officiis. Sunt quibusdam neque quidem repudiandae excepturi laboriosam eum debitis voluptatem.</p>
 					<img src="img/ayurvedaspices1.jpg" alt="ayurveda" title="ayurveda">
-					<p class="short">Наука о здоровой и гармоничной жизни. Выявление индивидуальных качеств и использование питания, специй, ароматерапии, знания о своей природе для сохранения внутреннего баланса на уровне тела, ума, эмоций и чувств и сохранения молодости и здоровья. Практика йоги «Оздоровление праной». Часть занятий ведет специалист по Ведической кулинарии и специям родом из Индии, так же специалист по ароматерамии и массажу.</p>
+					<p class="short">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, fugit asperiores facere ex nulla eius quod deleniti minus voluptates eligendi expedita excepturi, voluptatibus similique omnis. Praesentium velit magnam illum sint?</p>
 				</div><!-- .content -->
 			</div><!-- .event -->
 			<footer>
 				<div class="line"></div><!-- .line -->
 				<div class="content">
 					<div class="shortinfo">
-						<h3 class="white">О нас</h3>
-						<p>Для того, чтобы заниматься йогой, не требуется ни специальной одежды, ни специальной подготовки.</p> 
-						<p>На наших занятиях в доступной форме объясняются практики йоги – крии, асаны, вьяямы и пранаямы. Практические занятия помогут каждому извлечь пользу из древнейшей науки - йоги.</p>
+						<h3 class="white">H3</h3>
+						<p>Paragraph</p> 
+						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore, laudantium. Vel molestias sit minus aspernatur fugit tenetur veritatis nisi voluptates dolor praesentium, provident alias rem blanditiis, illo quidem repellat a.</p>
 					</div><!-- .shortinfo -->
 					<div class="shortinfo">
-						<h3 class="white">Твиты</h3>
+						<h3 class="white">H3</h3>
 						<dl>
 							<dt>Tweet <span>@mindbody</span></dt>
 								<dd>Новое летнее расписание в йога-студии mindbody, не пропустите последних обновлений</dd>
