--- a/Exam_maket/index.html
+++ b/Exam_maket/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Figma</title>
+    <title>Exam project</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/normalise.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,33 +20,27 @@
 					 <nav>
 						 <a href="#" class="chosen">главная</a>
 						 <a href="aboutus.html">о нас</a>
-						 <a href="classes.html">классы</a>
+						 <a href="classes.html">виды</a>
 						 <a href="gallery.html">фотогалерея</a>
 						 <a href="contacts.html">контакты</a>
 					 </nav>	
 					 <div class="clear"></div>
 				 </div><!-- .content -->
 			</header>		
-			<div class="slider">
-				<ul>
-					<li><img src="img/slider/yoga_capetown.jpg" alt="pic"></li>
-					<li><img src="img/slider/join_in.jpg" alt="pic"></li>
-					<li><img src="img/slider/kidsyogi.jpg" alt="pic"></li>
-					<li><img src="img/slider/meditation.jpg" alt="pic"></li>
-					<li><img src="img/slider/pregnant-yoga.jpg" alt="pic"></li>
-				</ul>	
-			</div><!-- .slider -->
 			<div class="advert">
+				<div class="banner">
+					<img src="images/banner.jpg" alt="banner" style="width:100%;">
+				</div>
 				<div class="content">
-					<h3>H3</h3>
-					<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat blanditiis architecto ratione eum modi magni consequuntur est sequi pariatur quasi voluptas nihil vel, enim deleniti. Distinctio itaque beatae debitis tempora.</p>
-					<a href="contacts.html" class="attention">Записаться</a>
+					<h3 style="color: black;">Тротуарная плитка</h3>
+					<p style="color: black;">Вам нужна качественная и недорогая тротуарная плитка в Волоколамске? Мы готовы предложить отличную возможность приобрести современные модели с высокими показателями эстетики и механической стойкости напрямую от производителя – компании «Мастер Строй».</p>
+					<a href="aboutus.html" class="attention" style="color: black;">О нас</a>
 				</div><!-- .content -->
 			</div><!-- .advert -->
 			<div class="services">
 				<div class="content">
-					<h2 class="dashed">H2</h2>
-					<p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos praesentium corporis voluptate in minus totam maxime, nemo illo voluptatibus facilis vel a, illum incidunt molestias asperiores accusamus delectus assumenda ipsam.</p>
+					<h2 class="dashed" style="color: black;">Виды</h2>
+					<p class="description">В современном ландшафтном дизайне используются изделия, которые делают участок более привлекательным и функциональным. Для выкладки садовых и пешеходных дорожек применяют различные виды тротуарной плитки.</p>
 					<div class="classtype">
 						<div class="type">
 							<h3>H3</h3>
